fixing collapse icon mobile

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -38,11 +38,13 @@
 }
 
 .transparent {
-    background-color: rgba(245, 245, 245, 0.4);
+    /*background: rgba(0,0,0,0.5);*/
+    background: rgba(245, 245, 245, 0.4);
   }
 
 .well {
-    background-color: RGBA(245, 245, 245, 0.4);
+      /*background: rgba(0,0,0,0.5);*/
+      background: rgba(245, 245, 245, 0.4);
 }
 
 /*.navbar-right {
